refactor: Use bundle overriding mechanism instead

--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -1,4 +1,4 @@
-{% include '@XiideaEasyConfig/default/base.html.twig' %}
+{% include '@XiideaEasyConfig/layout.html.twig' %}
 
 {% block content %}
     <div class="card card-custom" data-card="true">
