--- a/Resources/views/list.html.twig
+++ b/Resources/views/list.html.twig
@@ -1,4 +1,4 @@
-{% include '@XiideaEasyConfig/default/layout.html.twig' %}
+{% include '@XiideaEasyConfig/layout.html.twig' %}
 
 <div class="card card-custom" data-card="true">
     <div class="card-body">
