--- a/Resources/views/user.html.twig
+++ b/Resources/views/user.html.twig
@@ -1,4 +1,4 @@
-{% include '@XiideaEasyConfig/default/layout.html.twig' %}
+{% include '@XiideaEasyConfig/layout.html.twig' %}
 
 {% block content %}
     <div class="card card-custom" data-card="true">
