--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -2,19 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}My Website{% endblock %}</title>
+        <title>{% block title %} Easy Config Bundle{% endblock %}</title>
 
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('bundles/xiideaeasyconfig/css/easyconfig.css') }}" />
         {% endblock %}
     </head>
-<body>
-    <div class="container">
-        {% block content %} {% endblock %}
-    </div>
-
-    {% block javascripts %}
-        <script type="application/javascript" src="{{ asset('bundles/xiideaeasyconfig/js/easyconfig.js') }}"></script>
-    {% endblock %}
-</body>
+    <body>
+        <div class="container">
+            {% block xiidea_config_content %} {% endblock xiidea_config_content %}
+        </div>
+    </body>
 </html>
